samples/_failures_safe/1761539235_330ae6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d7fab4a.c: In function ‘main’:
./samples/SAFE/__tmp_7d7fab4a.c:156:30: error: expected ‘)’ at end of input
  156 |     int e = graph_add_node(&g
      |                           ~  ^
      |                              )
./samples/SAFE/__tmp_7d7fab4a.c:156:13: error: too few arguments to function ‘graph_add_node’
  156 |     int e = graph_add_node(&g
      |             ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_7d7fab4a.c:35:5: note: declared here
   35 | int graph_add_node(struct Graph *g, const char *label) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_7d7fab4a.c:156:5: error: expected declaration or statement at end of input
  156 |     int e = graph_add_node(&g
      |     ^~~
